nobase_include_HEADERS = \
        chx/net.hpp \
        chx/net/as_tuple.hpp \
        chx/net/async_combine.hpp \
        chx/net/async_execute.hpp \
        chx/net/async_openat.hpp \
        chx/net/async_operation.hpp \
        chx/net/async_read.hpp \
        chx/net/async_read_until.hpp \
        chx/net/async_sendfile.hpp \
        chx/net/async_sendmsg.hpp \
        chx/net/async_token.hpp \
        chx/net/async_write_sequence.hpp \
        chx/net/async_write_sequence_exactly.hpp \
        chx/net/async_write_some_exactly.hpp \
        chx/net/attribute.hpp \
        chx/net/basic_fixed_timer.hpp \
        chx/net/basic_stream_view.hpp \
        chx/net/basic_thread_context.hpp \
        chx/net/binary_container.hpp \
        chx/net/buffer.hpp \
        chx/net/buffer_sequence.hpp \
        chx/net/cancellation.hpp \
        chx/net/channel.hpp \
        chx/net/coroutine2.hpp \
        chx/net/detached.hpp \
        chx/net/detail/accumulate_size.hpp \
        chx/net/detail/atomic.hpp \
        chx/net/detail/basic_token_storage.hpp \
        chx/net/detail/dary_heap.hpp \
        chx/net/detail/deliver_exception.hpp \
        chx/net/detail/flat_multimap.hpp \
        chx/net/detail/flat_set.hpp \
        chx/net/detail/flatten_sequence.hpp \
        chx/net/detail/get_offset_of.hpp \
        chx/net/detail/heap.hpp \
        chx/net/detail/integral_constant.hpp \
        chx/net/detail/interrupter.hpp \
        chx/net/detail/io_uring_task_getter.hpp \
        chx/net/detail/is_container.hpp \
        chx/net/detail/monostate_container.hpp \
        chx/net/detail/mpmc_ring_buffer.hpp \
        chx/net/detail/mpsc_list.hpp \
        chx/net/detail/noncopyable.hpp \
        chx/net/detail/remove_rvalue_reference.hpp \
        chx/net/detail/scope_exit.hpp \
        chx/net/detail/sfinae_placeholder.hpp \
        chx/net/detail/span.hpp \
        chx/net/detail/task_aware.hpp \
        chx/net/detail/task_carrier.hpp \
        chx/net/detail/task_decl_ring_buffer.hpp \
        chx/net/detail/tracker.hpp \
        chx/net/detail/type_identity.hpp \
        chx/net/detail/unique_ptr_std_layout.hpp \
        chx/net/dynamic_buffer.hpp \
        chx/net/error_code.hpp \
        chx/net/exception.hpp \
        chx/net/file.hpp \
        chx/net/file_descriptor.hpp \
        chx/net/impl/async_openat.ipp \
        chx/net/impl/async_read.ipp \
        chx/net/impl/async_read_until.ipp \
        chx/net/impl/async_sendmsg.ipp \
        chx/net/impl/async_write_sequence.ipp \
        chx/net/impl/async_write_sequence_exactly.ipp \
        chx/net/impl/async_write_some_exactly.ipp \
        chx/net/impl/async_write_some_managed.ipp \
        chx/net/impl/basic_fixed_timer.ipp \
        chx/net/impl/basic_ip_socket.hpp \
        chx/net/impl/file.ipp \
        chx/net/impl/file_descriptor.ipp \
        chx/net/impl/general_async_close.hpp \
        chx/net/impl/general_io.hpp \
        chx/net/impl/general_ip_io.hpp \
        chx/net/impl/io_context.ipp \
        chx/net/impl/semaphore.ipp \
        chx/net/impl/tcp_acceptor.ipp \
        chx/net/impl/tcp_socket.ipp \
        chx/net/impl/udp_socket.ipp \
        chx/net/impl/write_exactly.hpp \
        chx/net/io_context.hpp \
        chx/net/iovec_buffer.hpp \
        chx/net/ip.hpp \
        chx/net/ip/impl/resolver.ipp \
        chx/net/ip/resolver.hpp \
        chx/net/ktimer.hpp \
        chx/net/managed.hpp \
        chx/net/semaphore.hpp \
        chx/net/signal.hpp \
        chx/net/ssl/context.hpp \
        chx/net/ssl/error_code.hpp \
        chx/net/ssl/impl/do_handshake.ipp \
        chx/net/ssl/impl/read.ipp \
        chx/net/ssl/impl/shutdown.ipp \
        chx/net/ssl/impl/ssl_poll.hpp \
        chx/net/ssl/impl/ssl_rw_poll.hpp \
        chx/net/ssl/impl/utility.hpp \
        chx/net/ssl/impl/write.ipp \
        chx/net/ssl/impl/write_seq.ipp \
        chx/net/ssl/ssl.hpp \
        chx/net/ssl/stream.hpp \
        chx/net/stream_base.hpp \
        chx/net/task_decl.hpp \
        chx/net/tcp.hpp \
        chx/net/thread_executor.hpp \
        chx/net/type_traits/flatten_sequence.hpp \
        chx/net/type_traits/is_container.hpp \
        chx/net/type_traits/is_sequence.hpp \
        chx/net/type_traits/remove_rvalue_reference.hpp \
        chx/net/udp.hpp \
        chx/net/utility.hpp \
        chx/net/when_any.hpp
